# dishframed

./: .gitignore  README.md  pyproject.toml
docs/: mvp.md
examples/: sample_menu.json  sample_menu_ocr.txt
src/dishframed/: __init__.py  cli.py  codex_extractor.py  html_templates.py  image_generation.py  menu_parser.py  models.py  openai_extractor.py  photo_grid.py  pipeline.py  render.py  svg_templates.py
src/dishframed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
